Shenandoah: write barrier on backedge of strip mined loop causes c2 crash at expansion time

XMLWordPrintable

    • b28

        If a write barrier is in the body of the outer strip mined loop, expanding it causes loop strip mining verification code to fail. This is worked around by turning the strip mined loop nests into a regular counted loop nest so verification code doesn't trigger. The logic that takes care of that breaks when the write barrier is on the backedge of the strip mined loop.

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: