8217042: Shenandoah: write barrier on backedge of strip mined loop causes c2 crash at expansion time

Reviewed-by: rkennke, thartmann